src/BadScript.Tests/tests/passing/scope/outerAccessible.bs
a = 1
r = false
function f()
{
	r = a == 1
}

f()

return r