src/BadScript.Tests/tests/failing/invalid-operations/missing_operator_03.bs
function f()
{
	
}

a = f + 1